--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="memories-timeline">
             <h2>Your memories which I like the most</h2>
             <div class="memory-item fade-in">
-                <img src="img\WhatsApp Image 2024-10-09 at 7.24.25 PM.jpeg" style="height: 250px; width: 250px;" alt="Memory 1">
+                <img src="img/WhatsApp Image 2024-10-09 at 7.24.25 PM.jpeg" style="height: 250px; width: 250px;" alt="Memory 1">
                 <p>Remember this day? It was magical! I called you "MAZI LAXMI"</p>
             </div>
             <div class="memory-item fade-in">
